styles.css
/* Variable definitions */
:root {
  --bg-color: #2e2e2e;
  --primary-text: #f5f5f5;
  --secondary-text: #c4c4c4;
  --complementary-text: #101010;
  --primary-accent: #ffd700;
  --secondary-accent: #87cefa;
}

html {
  box-sizing: border-box;
  font-size: 10px;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: inherit;
}

body {
  color: var(--secondary-text);
  font-size: 2rem;
  font-weight: 300;
  background-color: var(--bg-color);
}

a:any-link {
  text-decoration: none;
  color: var(--primary-accent);
  font-weight: 400;
}

h1,
h2,
h3 {
  color: var(--primary-text);
  font-weight: 400;
  text-align: center;
}

h1 {
  font-size: 3.2rem;
}

h2 {
  font-size: 3rem;
}

h3 {
  font-size: 2.8rem;
}

header,
main,
footer {
  width: 100%;
  max-width: 1920px;
  margin: 1.2rem;
  padding: 1.2rem;
}
header {
  display: flex;
  flex-direction: column;
  align-items: center;
  border-bottom: 2px solid var(--secondary-accent);
}

.header-title {
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
  column-gap: 2em;
}

.header-title > img {
  width: 100%;
  max-width: 280px;
  height: auto;
}

.header-title > span {
  color: var(--primary-text);
  font-size: 6rem;
  width: 100%;
}

#nav-bar {
  position: sticky;
  width: 100%;
  top: 0;
  left: 0;
}

#nav-bar > ul,
footer ul {
  list-style: none;
  display: flex;
  flex-direction: row;
  justify-content: center;
  column-gap: 1.6rem;
}

main {
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex: 1 1 0px;
  column-gap: 2rem;
}

.main-a,
.main-b {
  display: flex;
  flex-direction: column;
  row-gap: 2rem;
  align-items: center;
}

form {
  width: 100%;
  max-width: 320px;
}

#email,
#email-label {
  color: var(--primary-text);
}

#email {
  margin-left: 1.2rem;
  padding: 0.4rem;
  border-bottom: 2px solid var(--primary-text);
  background-color: var(--bg-color);
}

#submit {
  width: 100%;
  height: auto;
  text-align: center;
  margin: 1rem;
  padding: 1rem;
  border: 0;
  border-radius: 2px;
  font-size: 2.4rem;
  background-color: var(--primary-accent);
  color: var(--complementary-text);
}

footer {
  display: flex;
  flex-direction: column;
  row-gap: 0.8rem;
  align-items: center;
}

@media (max-width: 700) {
  main {
    flex-direction: column;
  }

  #navigation-links > ul {
    flex-direction: column;
    align-items: center;
  }
}

